[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/Tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/board.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Pieces/BQueen.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/pieces.png" type="Texture" id=5]
[ext_resource path="res://assets/UI_Elements02.png" type="Texture" id=6]
[ext_resource path="res://assets/UI_Button.tres" type="StyleBox" id=7]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=8]
[ext_resource path="res://assets/Sounds/Thinking_Music.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 256, 30 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 6 )
region_rect = Rect2( 30, 410, 318, 64 )
margin_right = 0.903742
margin_top = 2.69876
margin_bottom = 0.451871

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 343, 11, 55, 54 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )
filter_clip = true

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )
filter_clip = true

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )
filter_clip = true

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )
filter_clip = true

[node name="Level" type="Node2D"]
script = ExtResource( 8 )

[node name="Board" type="Node2D" parent="."]

[node name="board_tile_map" type="TileMap" parent="Board"]
visible = false
tile_set = ExtResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 2, 0, 2, 1, 0, 3, 2, 0, 4, 1, 0, 5, 2, 0, 6, 1, 0, 7, 2, 0, 65536, 2, 0, 65537, 1, 0, 65538, 2, 0, 65539, 1, 0, 65540, 2, 0, 65541, 1, 0, 65542, 2, 0, 65543, 1, 0, 131072, 1, 0, 131073, 2, 0, 131074, 1, 0, 131075, 2, 0, 131076, 1, 0, 131077, 2, 0, 131078, 1, 0, 131079, 2, 0, 196608, 2, 0, 196609, 1, 0, 196610, 2, 0, 196611, 1, 0, 196612, 2, 0, 196613, 1, 0, 196614, 2, 0, 196615, 1, 0, 262144, 1, 0, 262145, 2, 0, 262146, 1, 0, 262147, 2, 0, 262148, 1, 0, 262149, 2, 0, 262150, 1, 0, 262151, 2, 0, 327680, 2, 0, 327681, 1, 0, 327682, 2, 0, 327683, 1, 0, 327684, 2, 0, 327685, 1, 0, 327686, 2, 0, 327687, 1, 0, 393216, 1, 0, 393217, 2, 0, 393218, 1, 0, 393219, 2, 0, 393220, 1, 0, 393221, 2, 0, 393222, 1, 0, 393223, 2, 0, 458752, 2, 0, 458753, 1, 0, 458754, 2, 0, 458755, 1, 0, 458756, 2, 0, 458757, 1, 0, 458758, 2, 0, 458759, 1, 0 )

[node name="Border" type="StaticBody2D" parent="Board/board_tile_map"]
visible = false

[node name="Shape" type="CollisionShape2D" parent="Board/board_tile_map/Border"]
position = Vector2( 256, -32 )
shape = SubResource( 1 )

[node name="Shape2" type="CollisionShape2D" parent="Board/board_tile_map/Border"]
position = Vector2( -32, 256 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Shape3" type="CollisionShape2D" parent="Board/board_tile_map/Border"]
position = Vector2( 544, 256 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Shape4" type="CollisionShape2D" parent="Board/board_tile_map/Border"]
position = Vector2( 256, 544 )
shape = SubResource( 1 )

[node name="Board" type="Sprite" parent="Board"]
position = Vector2( 256, 256 )
texture = ExtResource( 3 )

[node name="Goal" type="Area2D" parent="Board"]
position = Vector2( 256, 32 )

[node name="Shape" type="CollisionShape2D" parent="Board/Goal"]
shape = SubResource( 2 )

[node name="Pieces" type="Node2D" parent="."]

[node name="BQueen" parent="Pieces" instance=ExtResource( 4 )]
position = Vector2( 480, 32 )
z_index = 1

[node name="Figure" parent="Pieces" instance=ExtResource( 2 )]
position = Vector2( 288, 480 )

[node name="Hint" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2( 64, 64 )
transform = Transform2D( 1, 0, 0, 1, 64, 64 )

[node name="UI" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="PanelContainer" parent="CanvasLayer/UI"]
visible = false
margin_top = 192.0
margin_right = 512.0
margin_bottom = 384.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/Options"]
margin_top = 2.69876
margin_right = 511.096
margin_bottom = 191.548

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Options/CenterContainer"]
margin_left = 53.0
margin_top = 62.0
margin_right = 457.0
margin_bottom = 126.0

[node name="King" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = SubResource( 7 )
clip_text = true

[node name="Queen" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = SubResource( 8 )
clip_text = true

[node name="Rook" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = SubResource( 11 )
clip_text = true

[node name="Knight" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
icon = SubResource( 14 )
clip_text = true

[node name="Bishop" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
icon = SubResource( 17 )
clip_text = true

[node name="Pawn" type="Button" parent="CanvasLayer/UI/Options/CenterContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
icon = SubResource( 20 )
clip_text = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( -64, -48 )
anchor_mode = 0
current = true
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="body_entered" from="Board/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/King" to="." method="_on_King_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/Queen" to="." method="_on_Queen_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/Rook" to="." method="_on_Rook_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/Knight" to="." method="_on_Knight_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/Bishop" to="." method="_on_Bishop_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Options/CenterContainer/HBoxContainer/Pawn" to="." method="_on_Pawn_pressed"]
